--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -11,6 +11,7 @@
  *= require_self
  *= require_tree .
  */
+/*
 <!DOCTYPE html>
 <html>
   <head>
@@ -27,4 +28,4 @@
       <%= yield %>
     </div>
   </body>
-</html>
+</html>*/
